--- a/content/post/2021-01-01-thesis.md
+++ b/content/post/2021-01-01-thesis.md
@@ -1,3 +1,8 @@
+---
+title: About me
+date: 2021-01-01
+---
+
 # Introduction {#sec:intro}
 
 Food systems have a substantial global environmental footprint by
